--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,18 +18,19 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.15.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  provider: ^4.3.2+1
-  flutter_svg: ^0.17.4
-  flutter_xlider: ^3.4.0
-  cupertino_icons: ^0.1.3
-  carousel_slider: ^2.2.1
+  provider: ^6.0.5
+  flutter_svg: 1.0.3
+  flutter_xlider: 3.4.0
+  cupertino_icons: ^1.0.2
+  carousel_slider: ^4.2.1
+  flutter_screenutil: ^5.6.0
 
 dev_dependencies:
   flutter_test:
