--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   provider: ^6.0.5
   flutter_svg: 1.0.3
-  flutter_xlider: 3.4.0
+  another_xlider: 1.1.1
   cupertino_icons: ^1.0.2
   carousel_slider: ^4.2.1
   flutter_screenutil: ^5.6.0
