--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   carousel_slider: ^4.2.1
   flutter_screenutil: ^5.6.0
+  shared_preferences: ^2.0.16
+  #sqflite: 2.0.2+1
+  #image_picker: 0.8.5
+  #intl: 0.17.0
 
 dev_dependencies:
   flutter_test:
